--- a/BibliotecaWPF/Views/CadastrarUsuario.xaml
+++ b/BibliotecaWPF/Views/CadastrarUsuario.xaml
@@ -7,10 +7,14 @@
         mc:Ignorable="d"
         Title="CadastrarUsuario" Height="450" Width="800">
     <Grid>
-        <TextBox x:Name="TxtNome" HorizontalAlignment="Left" Margin="25,33,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
-        <TextBox x:Name="TxtCPF" HorizontalAlignment="Left" Margin="25,56,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="BtnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="180,44,0,0" VerticalAlignment="Top" Height="41" Width="80" Click="BtnCadastrar_Click"/>
-        <TextBox x:Name="TxtSenha" HorizontalAlignment="Left" Margin="25,79,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="TxtNome" HorizontalAlignment="Left" Margin="74,96,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="225" />
+        <TextBox x:Name="TxtCPF" HorizontalAlignment="Left" Margin="74,119,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="225"/>
+        <Button x:Name="BtnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="320,107,0,0" VerticalAlignment="Top" Height="41" Width="80" Click="BtnCadastrar_Click" FontFamily="Consolas" FontWeight="Bold"/>
+        <TextBox x:Name="TxtSenha" HorizontalAlignment="Left" Margin="74,142,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="225"/>
+        <Label Content="Cadastrar usuário" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" FontStyle="Normal" FontSize="20"/>
+        <Label Content="Nome:" HorizontalAlignment="Left" Margin="31,93,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold"/>
+        <Label Content="CPF:" HorizontalAlignment="Left" Margin="38,116,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Consolas"/>
+        <Label Content="Senha:" HorizontalAlignment="Left" Margin="25,139,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Consolas"/>
 
     </Grid>
 </Window>
