--- a/BibliotecaWPF/Views/MenuUsuario.xaml
+++ b/BibliotecaWPF/Views/MenuUsuario.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MenuUsuario" Height="450" Width="800">
     <Grid>
-        
+        <TextBox x:Name="txtConfirmLogin" HorizontalAlignment="Left" Margin="184,260,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Menu Margin="10,10,10,0" Padding="10,0,0,0" VerticalAlignment="Top" Height="34">
+            <Button x:Name="btnCadastrarLivro" Content="Cadastrar livro" HorizontalAlignment="Left" VerticalAlignment="Top" Click="btnCadastrarLivro_Click"/>
+            <Button x:Name="btnListarLivros" Content="Listar livros" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75"/>
+        </Menu>
+
     </Grid>
 </Window>
