--- a/BibliotecaWPF/Views/Login.xaml
+++ b/BibliotecaWPF/Views/Login.xaml
@@ -6,12 +6,18 @@
         xmlns:local="clr-namespace:BibliotecaWPF.Views"
         mc:Ignorable="d"
         Title="Login" Height="450" Width="800">
+
     <Grid>
-        <Label Content="CPF:" HorizontalAlignment="Left" Margin="23,67,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold"/>
-        <Label Content="Senha:" HorizontalAlignment="Left" Margin="23,96,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold"/>
-        <Label Content="Login" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" FontSize="20"/>
-        <TextBox x:Name="TxtCPFlogin" HorizontalAlignment="Left" Margin="64,70,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
-        <TextBox x:Name="TxtSenhaLogin" HorizontalAlignment="Left" Margin="78,99,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="btnLogin" Content="Entrar" HorizontalAlignment="Left" Margin="141,138,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" FontSize="16" Click="btnLogin_Click"/>
+        <Menu Height="20" Padding="10,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Width="800">
+            <MenuItem x:Name="CadastrarUsuario" Header="Cadastrar usuário"/>
+            <MenuItem  Header="Tela Inicial" Click="MenuSair_Click"/>
+            <MenuItem x:Name="Login" Header="Login" />
+        </Menu>
+        <Label Content="CPF:" HorizontalAlignment="Left" Margin="23,81,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold"/>
+        <Label Content="Senha:" HorizontalAlignment="Left" Margin="23,131,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" RenderTransformOrigin="0.417,1.503"/>
+        <Label Content="Login" HorizontalAlignment="Left" Margin="23,25,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" FontSize="20"/>
+        <TextBox x:Name="TxtCPFlogin" HorizontalAlignment="Left" Margin="64,84,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
+        <TextBox x:Name="TxtSenhaLogin" HorizontalAlignment="Left" Margin="78,131,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="btnLogin" Content="Entrar" HorizontalAlignment="Left" Margin="141,194,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" FontSize="16" Click="btnLogin_Click"/>
     </Grid>
 </Window>
