--- a/BibliotecaWPF/Views/CadastrarUsuario.xaml
+++ b/BibliotecaWPF/Views/CadastrarUsuario.xaml
@@ -5,16 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BibliotecaWPF.Views"
         mc:Ignorable="d"
-        Title="CadastrarUsuario" Height="450" Width="800">
+        Title="BibliotecaVirtual" Height="450" Width="800">
     <Grid>
-        <TextBox x:Name="TxtNome" HorizontalAlignment="Left" Margin="74,96,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="225" />
-        <TextBox x:Name="TxtCPF" HorizontalAlignment="Left" Margin="74,119,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="225"/>
-        <Button x:Name="BtnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="320,107,0,0" VerticalAlignment="Top" Height="41" Width="80" Click="BtnCadastrar_Click" FontFamily="Consolas" FontWeight="Bold"/>
-        <TextBox x:Name="TxtSenha" HorizontalAlignment="Left" Margin="74,142,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="225"/>
-        <Label Content="Cadastrar usuário" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" FontStyle="Normal" FontSize="20"/>
-        <Label Content="Nome:" HorizontalAlignment="Left" Margin="31,93,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold"/>
-        <Label Content="CPF:" HorizontalAlignment="Left" Margin="38,116,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Consolas"/>
-        <Label Content="Senha:" HorizontalAlignment="Left" Margin="25,139,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Consolas"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="33*"/>
+            <ColumnDefinition Width="367*"/>
+        </Grid.ColumnDefinitions>
+        <Menu Height="20" Padding="10,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="800" Grid.ColumnSpan="2">
+            <MenuItem x:Name="Id_CadastrarUsuario" Header="Cadastrar usuário"/>
+            <MenuItem  Header="Tela Inicial" />
+            <MenuItem x:Name="id_Login" Header="Login" />
+        </Menu>
+        <TextBox x:Name="TxtNome" HorizontalAlignment="Left" Margin="8,96,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="225" Grid.Column="1" />
+        <TextBox x:Name="TxtCPF" HorizontalAlignment="Left" Margin="8,119,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="225" Grid.Column="1"/>
+        <Button x:Name="BtnCadastrar" Content="Cadastrar" HorizontalAlignment="Left" Margin="254,107,0,0" VerticalAlignment="Top" Height="41" Width="80" Click="BtnCadastrar_Click" FontFamily="Consolas" FontWeight="Bold" Grid.Column="1"/>
+        <TextBox x:Name="TxtSenha" HorizontalAlignment="Left" Margin="8,142,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="225" Grid.Column="1"/>
+        <Label Content="Cadastrar usuário" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" FontStyle="Normal" FontSize="20" Grid.ColumnSpan="2"/>
+        <Label Content="Nome:" HorizontalAlignment="Left" Margin="31,93,0,0" VerticalAlignment="Top" FontFamily="Consolas" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <Label Content="CPF:" HorizontalAlignment="Left" Margin="38,116,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Consolas" Grid.ColumnSpan="2"/>
+        <Label Content="Senha:" HorizontalAlignment="Left" Margin="25,139,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Consolas" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Window>
