--- a/BibliotecaWPF/Views/FormPrincipal.xaml
+++ b/BibliotecaWPF/Views/FormPrincipal.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BibliotecaWPF.Views"
         mc:Ignorable="d"
-        Title="Minha Biblioteca" Height="450" Width="800" WindowStyle="ToolWindow" FontFamily="Arial" FontWeight="Bold" FontStyle="Normal" Closing="Window_Closing">
+        Title="BibliotecaVirtual" Height="450" Width="800" WindowStyle="ToolWindow" FontFamily="Arial" FontWeight="Bold" FontStyle="Normal" Closing="Window_Closing">
     <Grid>
         <Menu Height="20" Padding="10,0,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Width="800">
             <MenuItem x:Name="CadastrarUsuario" Header="Cadastrar usuário" Click="CadastrarUsuario_Click"/>
